--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,12 @@ python:
   - 3.4
   - 3.5
 
+before_install:
+    - pip install --upgrade pytest
+
 install:
-  - pip install -r requirements.txt
   - pip install pytest-cov python-coveralls
+  - pip install -r requirements.txt
 
 script:
   - if [[ $TRAVIS_PYTHON_VERSION == 2.7 ]];
